@@ -533,7 +533,7 @@ Grid::ComputeBounds ()
 	}
 }
 void
-Grid::PostRender (List *ctx, Region *region, bool skip_children)
+Grid::PostRender (Stack *ctx, Region *region, bool skip_children)
 {
 	// render our chidren if we need to
 	if (!skip_children) {
@@ -547,7 +547,7 @@ Grid::PostRender (List *ctx, Region *region, bool skip_children)
 		double dash = 4;
 		ColumnDefinitionCollection *cols = GetColumnDefinitionsNoAutoCreate ();
 		RowDefinitionCollection *rows = GetRowDefinitionsNoAutoCreate ();
-		cairo_t *cr = ((ContextNode *) ctx->First ())->GetCr ();
+		cairo_t *cr = ((ContextNode *) ctx->Top ())->GetCr ();
 		int col_count = cols ? cols->GetCount () : 0;
 		int row_count = rows ? rows->GetCount () : 0;
 		
