@@ -175,7 +175,7 @@ class Grid : public Panel {
 
  protected:
 	virtual ~Grid ();
-	virtual void PostRender (List *ctx, Region *region, bool skip_children);
+	virtual void PostRender (Stack *ctx, Region *region, bool skip_children);
 
  public:
  	/* @PropertyType=gint32,DefaultValue=0,Attached,GenerateAccessors,Validator=PositiveIntValidator */
